# marimo-uv-jax

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
.github/: renovate.json
.github/workflows/: ci.yml  renovate.yml
experiments/: README.md  __init__.py  example.py
reproductions/: README.md  __init__.py  example.py
src/marimo_uv_jax/: __init__.py  utils.py
tests/: test_sample.py
